# aoc2025

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  direction.rs  grid.rs  lib.rs  main.rs  point.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
