[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
regex = "1.11.0"
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }
nextest = "0.0.0"
md5 = "0.7.0"
anyhow = "1.0.90"
thiserror = "1.0.64"
fancy-regex = "0.16.2"
rayon = "1.11.0"
pathfinding = "4.14.0"
